tests/snapshots/snapshot_fixtures__fixtures_gcc_torture__20230802_1.snap
---
source: tests/snapshot_fixtures.rs
expression: snapshot
---
module "/home/takashi/Projects/clang-ir-rs/tests/fixtures.gcc-torture/20230802-1.c" (c, x86_64-unknown-linux-gnu)
fn foo(%arg5: u32i) -> s64i [external, c, no_inline, dso_local, nothrow] {
    ^bb0(%arg5: u32i):
        %96 = alloca u32i, "x", align 4
        %97 = alloca s64i, "__retval", align 8
        %98 = alloca s32i, "y", align 4
        store %arg5, %96
        %99 = load %96 : u32i, align 4
        %100 = cast(integral) %99 : s32i
        store %100, %98, align 4
        %101 = load %98 : s32i, align 4
        %102 = not %101 : s32i
        store %102, %98, align 4
        %103 = load %96 : u32i, align 4
        %104 = cast(integral) %103 : s64i
        %105 = load %98 : s32i, align 4
        %106 = cast(integral) %105 : s64i
        %107 = and %104, %106 : s64i
        store %107, %97
        %108 = load %97 : s64i
        return %108
}
fn foo_v(%arg4: u32i) -> s64i [external, c, no_inline, dso_local, nothrow] {
    ^bb0(%arg4: u32i):
        %83 = alloca u32i, "x", align 4
        %84 = alloca s64i, "__retval", align 8
        %85 = alloca s32i, "y", align 4
        store %arg4, %83
        %86 = load %83 : u32i, align 4, volatile
        %87 = cast(integral) %86 : s32i
        store %87, %85, align 4, volatile
        %88 = load %85 : s32i, align 4, volatile
        %89 = not %88 : s32i
        store %89, %85, align 4, volatile
        %90 = load %83 : u32i, align 4, volatile
        %91 = cast(integral) %90 : s64i
        %92 = load %85 : s32i, align 4, volatile
        %93 = cast(integral) %92 : s64i
        %94 = and %91, %93 : s64i
        store %94, %84
        %95 = load %84 : s64i
        return %95
}
fn bar(%arg3: u32i) -> s64i [external, c, no_inline, dso_local, nothrow] {
    ^bb0(%arg3: u32i):
        %70 = alloca u32i, "x", align 4
        %71 = alloca s64i, "__retval", align 8
        %72 = alloca s32i, "y", align 4
        store %arg3, %70
        %73 = load %70 : u32i, align 4
        %74 = cast(integral) %73 : s32i
        store %74, %72, align 4
        %75 = load %72 : s32i, align 4
        %76 = not %75 : s32i
        store %76, %72, align 4
        %77 = load %70 : u32i, align 4
        %78 = cast(integral) %77 : s64i
        %79 = load %72 : s32i, align 4
        %80 = cast(integral) %79 : s64i
        %81 = xor %78, %80 : s64i
        store %81, %71
        %82 = load %71 : s64i
        return %82
}
fn bar_v(%arg2: u32i) -> s64i [external, c, no_inline, dso_local, nothrow] {
    ^bb0(%arg2: u32i):
        %57 = alloca u32i, "x", align 4
        %58 = alloca s64i, "__retval", align 8
        %59 = alloca s32i, "y", align 4
        store %arg2, %57
        %60 = load %57 : u32i, align 4, volatile
        %61 = cast(integral) %60 : s32i
        store %61, %59, align 4, volatile
        %62 = load %59 : s32i, align 4, volatile
        %63 = not %62 : s32i
        store %63, %59, align 4, volatile
        %64 = load %57 : u32i, align 4, volatile
        %65 = cast(integral) %64 : s64i
        %66 = load %59 : s32i, align 4, volatile
        %67 = cast(integral) %66 : s64i
        %68 = xor %65, %67 : s64i
        store %68, %58
        %69 = load %58 : s64i
        return %69
}
fn baz(%arg1: u32i) -> s64i [external, c, no_inline, dso_local, nothrow] {
    ^bb0(%arg1: u32i):
        %44 = alloca u32i, "x", align 4
        %45 = alloca s64i, "__retval", align 8
        %46 = alloca s32i, "y", align 4
        store %arg1, %44
        %47 = load %44 : u32i, align 4
        %48 = cast(integral) %47 : s32i
        store %48, %46, align 4
        %49 = load %46 : s32i, align 4
        %50 = not %49 : s32i
        store %50, %46, align 4
        %51 = load %46 : s32i, align 4
        %52 = cast(integral) %51 : s64i
        %53 = load %44 : u32i, align 4
        %54 = cast(integral) %53 : s64i
        %55 = xor %52, %54 : s64i
        store %55, %45
        %56 = load %45 : s64i
        return %56
}
fn baz_v(%arg0: u32i) -> s64i [external, c, no_inline, dso_local, nothrow] {
    ^bb0(%arg0: u32i):
        %31 = alloca u32i, "x", align 4
        %32 = alloca s64i, "__retval", align 8
        %33 = alloca s32i, "y", align 4
        store %arg0, %31
        %34 = load %31 : u32i, align 4, volatile
        %35 = cast(integral) %34 : s32i
        store %35, %33, align 4, volatile
        %36 = load %33 : s32i, align 4, volatile
        %37 = not %36 : s32i
        store %37, %33, align 4, volatile
        %38 = load %33 : s32i, align 4, volatile
        %39 = cast(integral) %38 : s64i
        %40 = load %31 : u32i, align 4, volatile
        %41 = cast(integral) %40 : s64i
        %42 = xor %39, %41 : s64i
        store %42, %32
        %43 = load %32 : s64i
        return %43
}
fn abort() -> void [external, c, nothrow];
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
    %0 = alloca s32i, "__retval", align 4
    %1 = const 0 : s32i
    store %1, %0
    scope {
        %3 = alloca s32i, "t", align 4
        %4 = const -1 : s32i
        store %4, %3, align 4
        for cond: {
            %28 = load %3 : s32i, align 4
            %29 = const 1 : s32i
            %30 = cmp le %28, %29 : bool
            condition %30
        } step: {
            %5 = load %3 : s32i, align 4
            %6 = inc %5 : s32i [nsw]
            store %6, %3, align 4
            yield
        } do {
            scope {
                scope {
                    %21 = load %3 : s32i, align 4
                    %22 = cast(integral) %21 : u32i
                    %23 = call @foo(%22) : s64i [all]
                    %24 = load %3 : s32i, align 4
                    %25 = cast(integral) %24 : u32i
                    %26 = call @foo_v(%25) : s64i [all]
                    %27 = cmp ne %23, %26 : bool
                    if %27 {
                        call @abort() [all]
                        yield
                    }
                    yield
                }
                scope {
                    %14 = load %3 : s32i, align 4
                    %15 = cast(integral) %14 : u32i
                    %16 = call @bar(%15) : s64i [all]
                    %17 = load %3 : s32i, align 4
                    %18 = cast(integral) %17 : u32i
                    %19 = call @bar_v(%18) : s64i [all]
                    %20 = cmp ne %16, %19 : bool
                    if %20 {
                        call @abort() [all]
                        yield
                    }
                    yield
                }
                scope {
                    %7 = load %3 : s32i, align 4
                    %8 = cast(integral) %7 : u32i
                    %9 = call @baz(%8) : s64i [all]
                    %10 = load %3 : s32i, align 4
                    %11 = cast(integral) %10 : u32i
                    %12 = call @baz_v(%11) : s64i [all]
                    %13 = cmp ne %9, %12 : bool
                    if %13 {
                        call @abort() [all]
                        yield
                    }
                    yield
                }
                yield
            }
            yield
        }
        yield
    }
    %2 = load %0 : s32i
    return %2
}
