tests/snapshots/snapshot_fixtures__fixtures_gcc_torture__900409_1.snap
---
source: tests/snapshot_fixtures.rs
expression: snapshot
---
module "/home/takashi/Projects/clang-ir-rs/tests/fixtures.gcc-torture/900409-1.c" (c, x86_64-unknown-linux-gnu)
fn f1(%arg5: s64i) -> s64i [external, c, no_inline, dso_local, nothrow] {
    ^bb0(%arg5: s64i):
        %72 = alloca s64i, "a", align 8
        %73 = alloca s64i, "__retval", align 8
        store %arg5, %72
        %74 = load %72 : s64i, align 8
        %75 = const 4278190080 : s64i
        %76 = and %74, %75 : s64i
        store %76, %73
        %77 = load %73 : s64i
        return %77
}
fn f2(%arg4: s64i) -> s64i [external, c, no_inline, dso_local, nothrow] {
    ^bb0(%arg4: s64i):
        %66 = alloca s64i, "a", align 8
        %67 = alloca s64i, "__retval", align 8
        store %arg4, %66
        %68 = load %66 : s64i, align 8
        %69 = const -4278190081 : s64i
        %70 = and %68, %69 : s64i
        store %70, %67
        %71 = load %67 : s64i
        return %71
}
fn f3(%arg3: s64i) -> s64i [external, c, no_inline, dso_local, nothrow] {
    ^bb0(%arg3: s64i):
        %60 = alloca s64i, "a", align 8
        %61 = alloca s64i, "__retval", align 8
        store %arg3, %60
        %62 = load %60 : s64i, align 8
        %63 = const 255 : s64i
        %64 = and %62, %63 : s64i
        store %64, %61
        %65 = load %61 : s64i
        return %65
}
fn f4(%arg2: s64i) -> s64i [external, c, no_inline, dso_local, nothrow] {
    ^bb0(%arg2: s64i):
        %54 = alloca s64i, "a", align 8
        %55 = alloca s64i, "__retval", align 8
        store %arg2, %54
        %56 = load %54 : s64i, align 8
        %57 = const -256 : s64i
        %58 = and %56, %57 : s64i
        store %58, %55
        %59 = load %55 : s64i
        return %59
}
fn f5(%arg1: s64i) -> s64i [external, c, no_inline, dso_local, nothrow] {
    ^bb0(%arg1: s64i):
        %48 = alloca s64i, "a", align 8
        %49 = alloca s64i, "__retval", align 8
        store %arg1, %48
        %50 = load %48 : s64i, align 8
        %51 = const 65535 : s64i
        %52 = and %50, %51 : s64i
        store %52, %49
        %53 = load %49 : s64i
        return %53
}
fn f6(%arg0: s64i) -> s64i [external, c, no_inline, dso_local, nothrow] {
    ^bb0(%arg0: s64i):
        %42 = alloca s64i, "a", align 8
        %43 = alloca s64i, "__retval", align 8
        store %arg0, %42
        %44 = load %42 : s64i, align 8
        %45 = const -65536 : s64i
        %46 = and %44, %45 : s64i
        store %46, %43
        %47 = load %43 : s64i
        return %47
}
fn abort() -> void [external, c, nothrow];
fn exit(%arg0: s32i) -> void [external, c];
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
    %0 = alloca s32i, "__retval", align 4
    %1 = alloca s64i, "a", align 8
    %2 = const 0 : s32i
    store %2, %0
    %3 = const 2309737967 : s64i
    store %3, %1, align 8
    scope {
        %7 = load %1 : s64i, align 8
        %8 = call @f1(%7) : s64i [all]
        %9 = const 2298478592 : s64i
        %10 = cmp ne %8, %9 : bool
        %11 = ternary %10 ? { : bool
            %41 = const #true : bool
            yield %41
        } : {
            %37 = load %1 : s64i, align 8
            %38 = call @f2(%37) : s64i [all]
            %39 = const 11259375 : s64i
            %40 = cmp ne %38, %39 : bool
            yield %40
        }
        %12 = ternary %11 ? { : bool
            %36 = const #true : bool
            yield %36
        } : {
            %32 = load %1 : s64i, align 8
            %33 = call @f3(%32) : s64i [all]
            %34 = const 239 : s64i
            %35 = cmp ne %33, %34 : bool
            yield %35
        }
        %13 = ternary %12 ? { : bool
            %31 = const #true : bool
            yield %31
        } : {
            %27 = load %1 : s64i, align 8
            %28 = call @f4(%27) : s64i [all]
            %29 = const 2309737728 : s64i
            %30 = cmp ne %28, %29 : bool
            yield %30
        }
        %14 = ternary %13 ? { : bool
            %26 = const #true : bool
            yield %26
        } : {
            %22 = load %1 : s64i, align 8
            %23 = call @f5(%22) : s64i [all]
            %24 = const 52719 : s64i
            %25 = cmp ne %23, %24 : bool
            yield %25
        }
        %15 = ternary %14 ? { : bool
            %21 = const #true : bool
            yield %21
        } : {
            %17 = load %1 : s64i, align 8
            %18 = call @f6(%17) : s64i [all]
            %19 = const 2309685248 : s64i
            %20 = cmp ne %18, %19 : bool
            yield %20
        }
        if %15 {
            %16 = get_global @abort : (() -> void)*
            call @abort() [all]
            yield
        }
        yield
    }
    %4 = get_global @exit : ((s32i) -> void)*
    %5 = const 0 : s32i
    call @exit(%5) [all]
    %6 = load %0 : s32i
    return %6
}
